fix overflow component

--- a/src/app/components/chat-main/chat-main.component.css
+++ b/src/app/components/chat-main/chat-main.component.css
@@ -44,3 +44,6 @@
   max-width: 300px;
 
 }
+.z-second{
+  z-index: 8888!important;
+}
